2001-07-25  Andrew MacLeod  <amacleod@redhat.com>

	* config/ia64/ia64.h (STRIP_NAME_ENCODING): Strip out '*' as well.

2001-07-24  Joel Sherrill <joel@OARcorp.com>

	* config/i960/i960.h (CPP_SPEC): Define _SOFT_FLOAT for -msoft-float.

2001-07-24  Joel Sherrill <joel@OARcorp.com>

	* config/sparc/rtems.h (CPP_PREDEFINES): Remove redundant
	-Acpu and -Amachine.h.
	* config/sparc/rtemself.h (CPP_PREDEFINES): Likewise.
	Corrected header to say ELF not a.out.
	* config/sparc/sparc.h (CPP_CPU_SPEC): Define _SOFT_FLOAT 
	when given -msoft-float.

2001-07-24  Joel Sherrill <joel@OARcorp.com>

	* config.gcc (arm*-*-rtems*): Include crtinit.o and crtfini.o as
	extra multilib parts like arm-elf.
	(i960-*-coff*, i960-*-rtems): Should not use collect2.
	(m68020-*-elf*, m68k-*-elf*, m68k-*-rtems*): Include crtinit.o and
	crtfini.o as extra multilib parts.

2001-07-24  Joel Sherrill <joel@OARcorp.com>

	* configure.in: Add rtems as a supported thread model.
	* gthr-rtems.h: Add missing entry point __gthread_active_p.
	* configure: Rebuilt.

2001-07-24  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/mips/irix6-libc-compat.c: New file.
	* config/mips/t-iris6 (LIB2FUNCS_STATIC_EXTRA): Use it.
	* doc/install.texi (Specific, mips*-sgi-irix6): Mention structure
	passing workaround.

2001-07-23  Kazu Hirata  <kazu@hxi.com>

	* reload.c: Fix comment typos.

2001-07-23  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_expand_setcc): Don't use method 0
	before CSE.
	* config/i386/i386.md: New setcc+movzbl peephole2.

2001-07-23  lars brinkhoff  <lars@nocrew.org>

	* tm.texi (TARGET_FLOAT_FORMAT): Document IBM_FLOAT_FORMAT
	and C4X_FLOAT_FORMAT.
	(BOOL_TYPE_SIZE): Document.

2001-07-22  Richard Henderson  <rth@redhat.com>

	* fold-const.c (fold): Test vs FLOAT_TYPE_P instead of
	INTEGRAL_TYPE_P when folding comparisons with operand_equal_p
	arguments.

2001-07-22  Alexandre Oliva  <aoliva@redhat.com>
