@@ -4972,9 +4972,9 @@
 {
   emit_library_call (gen_rtx_SYMBOL_REF (Pmode, \"__ia64_nonlocal_goto\"),
 		     LCT_NORETURN, VOIDmode, 3,
-		     operands[3], Pmode,
+		     operands[1], Pmode,
 		     copy_to_reg (XEXP (operands[2], 0)), Pmode,
-		     operands[1], Pmode);
+		     operands[3], Pmode);
   emit_barrier ();
   DONE;
 }")
